--- a/faq/index.html
+++ b/faq/index.html
@@ -233,12 +233,12 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 
 <hr>
 
-Спиок тех, кто работал над составлением этого FAQ:
+Список тех, кто работал над составлением этого FAQ:
 Nick Holland, Steven Mestdagh, Joel Knight,
 Eric Jackson, Wim Vandeputte и Chris Cappuccio.
 
 <p>
-Вопросы и комментарии, касателньо этого FAQ, отправляйте 
+Вопросы и комментарии, касателньо этого FAQ, отправляйте
 (на английском языке) на
 <a href="mailto:misc@openbsd.org">misc@openbsd.org</a>.
 Для общих вопросов об OpenBSD используйте соответствующие
