[1.166] better wording - mail.html

--- a/mail.html
+++ b/mail.html
@@ -21,7 +21,7 @@ h2 {
 <hr>
 
 <p>
-Списки рассылки являются важным средством общения пользователей и
+Списки рассылки являются основным средством общения пользователей и
 разработчиков OpenBSD. За исключением <b>announce</b>, почтовые рассылки
 не модерируются. Мы сознательно ограничиваем количество рассылок.
 Это помогает снизить объем перекрестных публикаций (cross-posting) и
