[1.541] better wording - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -30,7 +30,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <a href="faq5.html#Flavors">разрабатываемой (<i>-current</i>)</a>
 версией тут не рассматриваются.
 
-<h3>Quick Links:</h3>
+<h3>Важные темы:</h3>
 
 <table>
   <tr>
@@ -198,7 +198,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq17.html#clientikev1"    >Подключение к IKEv1/L2TP VPN</a>
 </ul>
 
-<h3><a href="pf/index.html">Руководство PF</a></h3>
+<h3><a href="pf/index.html">PF руководство</a></h3>
 <ul>
 <li>Основная настройка
   <ul>
@@ -238,8 +238,8 @@ Nick Holland, Steven Mestdagh, Joel Knight,
 Eric Jackson, Wim Vandeputte и Chris Cappuccio.
 
 <p>
-Вопросы и комментарии, касателньо этого FAQ, отправляйте
-(на английском языке) на
-<a href="mailto:misc@openbsd.org">misc@openbsd.org</a>.
-Для общих вопросов об OpenBSD используйте соответствующие
-<a href="../mail.html">почтовые рассылки</a>.
+Вопросы и комментарии, касательно оригинальной
+<a href="https://www.openbsd.org/faq/index.html">английской версии FAQ</a>,
+отправляйте (на английском языке) на <a href="mailto:misc@openbsd.org">misc@openbsd.org</a>.
+Общие вопросы касательно самой OpenBSD отправляйте при помощи
+<a href="../mail.html">почтовых рассылок</a>.
