--- a/hackathons.html
+++ b/hackathons.html
@@ -90,6 +90,15 @@ td {
 <table>
 <tr>
 <td>
+    <a id="e2k19" href="images/hackathons/e2k19.gif">
+    <img src="images/hackathons/e2k19-s.gif" alt="e2k19-s"></a><br>
+    e2k19: elk lakes cabin hackathon<br>
+    Ноябрь 25 - 30, 2019<br>
+    Elk Lakes Cabin, Британская Колумбия, Канада<br>
+    13 разработчиков<br>
+    При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
+    и поддержке <a href="http://www.xplornet.ca">Xplornet</a>.
+<td>
     <a id="p2k19" href="images/hackathons/p2k19.gif">
     <img src="images/hackathons/p2k19-s.gif" alt="p2k19-s"></a><br>
     p2k19: ports hackathon<br>
@@ -109,6 +118,7 @@ td {
     43 разработчика<br>
     При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
+<tr>
 <td>
     <a id="t2k19" href="images/hackathons/t2k19.gif">
     <img src="images/hackathons/t2k19-s.gif" alt="t2k19-s"></a><br>
@@ -119,7 +129,6 @@ td {
     При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Kevin Lo и <a href="http://www.funtoro.com">MSI/FUNTORO</a>
     <br>
-<tr>
 <td>
     <a id="a2k19" href="images/hackathons/a2k19.gif">
     <img src="images/hackathons/a2k19-s.gif" alt="a2k19-s"></a><br>
@@ -139,6 +148,7 @@ td {
     5 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
+<tr>
 <td>
     <a id="n2k18" href="images/hackathons/n2k18.gif">
     <img src="images/hackathons/n2k18-s.gif" alt="n2k18-s"></a><br>
@@ -149,7 +159,6 @@ td {
     При поддержке Univerzita Jana Evangelisty Purkyn&#283;,
     финансировании Oracle и
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="g2k18" href="images/hackathons/g2k18.gif">
     <img src="images/hackathons/g2k18-s.gif" alt="g2k18-s"></a><br>
@@ -168,6 +177,7 @@ td {
     24 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.epitech.eu">Epitech Nantes</a>.
+<tr>
 <td>
     <a id="a2k18" href="images/hackathons/a2k18.gif">
     <img src="images/hackathons/a2k18-s.gif" alt="a2k18-s"></a><br>
@@ -177,7 +187,6 @@ td {
     19 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.otago.ac.nz">University of Otago</a>.
-<tr>
 <td>
     <a id="s2k17" href="images/hackathons/s2k17.gif">
     <img src="images/hackathons/s2k17-s.gif" alt="s2k17-s"></a><br>
@@ -197,6 +206,7 @@ td {
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.in-berlin.de">IN-Berlin</a> and
     <a href="http://www.hostserver.de/">Hostserver</a>.
+<tr>
 <td>
     <a id="t2k17" href="images/hackathons/t2k17.jpg">
     <img src="images/hackathons/t2k17-s.gif" alt="t2k17-s"></a><br>
@@ -206,7 +216,6 @@ td {
     38 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.utoronto.ca">University of Toronto</a>.
-<tr>
 <td>
     <a id="d2k17" href="images/hackathons/d2k17.gif">
     <img src="images/hackathons/d2k17-s.gif" alt="d2k17-s"></a><br>
@@ -224,6 +233,7 @@ td {
     Эдмонтон, Канада<br>
     5 разработчиков<br>
     При поддержке Bob Beck.
+<tr>
 <td>
     <a id="a2k17" href="images/hackathons/a2k17.gif">
     <img src="images/hackathons/a2k17-s.gif" alt="a2k17-s"></a><br>
@@ -233,7 +243,6 @@ td {
     19 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и David Gwynne.	
-<tr>
 <td>
     <br>
     <br>
@@ -263,6 +272,7 @@ td {
     Будапешт, Венгрия<br>
     10 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="g2k16" href="images/hackathons/g2k16.gif">
     <img src="images/hackathons/g2k16-s.gif" alt="g2k16-s"></a><br>
@@ -273,7 +283,6 @@ td {
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     with the help of
     <a href="http://www.cl.cam.ac.uk">Computer Laboratory, Cambridge</a>.
-<tr>
 <td>
     <a id="n2k16" href="images/hackathons/n2k16.gif">
     <img src="images/hackathons/n2k16-s.gif" alt="n2k16-s"></a><br>
@@ -293,6 +302,7 @@ td {
     22 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.epitech.eu">Epitech Nantes</a>.
+<tr>
 <td>
     <a id="n2k15" href="images/hackathons/n2k15.gif">
     <img src="images/hackathons/n2k15-s.gif" alt="n2k15-s"></a><br>
@@ -302,7 +312,6 @@ td {
     19 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://esdenera.com">Esdenera Networks</a>.
-<tr>
 <td>
     <a id="u2k15" href="images/hackathons/u2k15.gif">
     <img src="images/hackathons/u2k15-s.gif" alt="u2k15-s"></a><br>
@@ -321,6 +330,7 @@ td {
     17 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     with help of the <a href="http://foi.unizg.hr">Open Systems and Security Lab</a>.
+<tr>
 <td>
     <a id="j2k15" href="images/hackathons/j2k15.gif">
     <img src="images/hackathons/j2k15-s.gif" alt="j2k15-s"></a><br>
@@ -329,7 +339,6 @@ td {
     п. Насу, Тотиги, Япония<br>
     6 разработчиков<br>
     With the support of <a href="http://www.iij-ii.co.jp/en/">IIJ innovation institute</a>.
-<tr>
 <td>
     <a id="c2k15" href="images/hackathons/c2k15.gif">
     <img src="images/hackathons/c2k15-s.gif" alt="c2k15-s"></a><br>
@@ -348,6 +357,7 @@ td {
     14 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of Andy Henderson.
+<tr>
 <td>
     <a id="s2k15" href="images/hackathons/s2k15.gif">
     <img src="images/hackathons/s2k15-s.gif" alt="s2k15-s"></a><br>
@@ -357,7 +367,6 @@ td {
     21 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of David Gwynne.
-<tr>
 <td>
     <a id="g2k14" href="images/hackathons/g2k14.gif">
     <img src="images/hackathons/g2k14-s.gif" alt="g2k14-s"></a><br>
@@ -376,6 +385,7 @@ td {
     12 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.uca.ma/">Universit&eacute; Cadi Ayyad</a>.
+<tr>
 <td>
     <a id="n2k14" href="images/hackathons/n2k14.gif">
     <img src="images/hackathons/n2k14-s.gif" alt="n2k14-s"></a><br>
@@ -385,7 +395,6 @@ td {
     15 разработчиков<br>
     При финансировании <a href="http://www.foretell.ca">ForeTell Technologies</a>
     и поддержке <a href="http://www.otago.ac.nz">University of Otago</a>.
-<tr>
 <td>
     <a id="b2k13" href="images/hackathons/b2k13.gif">
     <img src="images/hackathons/b2k13-s.gif" alt="b2k13-s"></a><br>
@@ -404,6 +413,7 @@ td {
     43 разработчика<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.utoronto.ca">University of Toronto</a>.
+<tr>
 <td>
     <a id="n2k13" href="images/hackathons/n2k13.gif">
     <img src="images/hackathons/n2k13-s.gif" alt="n2k13-s"></a><br>
@@ -413,7 +423,6 @@ td {
     17 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.otago.ac.nz">University of Otago</a>.
-<tr>
 <td>
     <a id="c2k12" href="images/hackathons/c2k12.gif">
     <img src="images/hackathons/c2k12-s.gif" alt="c2k12-s"></a><br>
@@ -432,6 +441,7 @@ td {
     9 разработчиков<br>
     Funded by <a href="https://www.openbsd.org/donations.html">donations to
     The OpenBSD Project</a>.
+<tr>
 <td>
     <a id="n2k12" href="images/hackathons/n2k12.gif">
     <img src="images/hackathons/n2k12-s.gif" alt="n2k12-s"></a><br>
@@ -440,7 +450,6 @@ td {
     Штарнберг, Германия<br>
     23 разработчика<br>
     Funded by <a href="http://www.genua.de">genua</a>.
-<tr>
 <td>
     <a id="g2k12" href="images/hackathons/g2k12.gif">
     <img src="images/hackathons/g2k12-s.gif" alt="g2k12-s"></a><br>
@@ -459,6 +468,7 @@ td {
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and support of <a href="http://www.ihp.fr">Institute Henri Poincar&eacute;</a> and
     <a href="http://www.u-psud.fr">Paris-Sud University</a>.
+<tr>
 <td>
     <a id="p2k11" href="images/hackathons/p2k11.gif">
     <img src="images/hackathons/p2k11-s.gif" alt="p2k11-s"></a><br>
@@ -468,7 +478,6 @@ td {
     15 разработчиков<br>
     Funded by <a href="https://www.openbsd.org/donations.html">donations to
     the OpenBSD Project</a>.
-<tr>
 <td>
     <a id="a2k11" href="images/hackathons/a2k11.gif">
     <img src="images/hackathons/a2k11-s.gif" alt="a2k11-s"></a><br>
@@ -487,6 +496,7 @@ td {
     25 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of Mitja Mu&#382;eni&#269;.
+<tr>
 <td>
     <a id="c2k11" href="images/hackathons/c2k11.gif">
     <img src="images/hackathons/c2k11-s.gif" alt="c2k11-s"></a><br>
@@ -495,7 +505,6 @@ td {
     Эдмонтон, Альберта, Канада<br>
     36 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="k2k11" href="images/hackathons/k2k11.jpg">
     <img src="images/hackathons/k2k11-s.gif" alt="k2k11-s"></a><br>
@@ -513,6 +522,7 @@ td {
     19 разработчиков<br>
     При поддержке
     <a href="https://www.openbsd.org/donations.html">пожертований проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="j2k10" href="images/hackathons/j2k10.gif">
     <img src="images/hackathons/j2k10-s.gif" alt="j2k10-s"></a><br>
@@ -520,7 +530,6 @@ td {
     Сентябрь 19 - 25, 2010<br>
     Akiyamago, Sakae Mura, Nagano, Japan<br>
     19 разработчиков<br>
-<tr>
 <td>
     <a id="c2k10" href="images/hackathons/c2k10.gif">
     <img src="images/hackathons/c2k10-s.gif" alt="c2k10-s"></a><br>
@@ -546,6 +555,7 @@ td {
     17 разработчиков<br>
     При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://vpac.org">Victorian Partnership for Advanced Computing</a>
+<tr>
 <td>
     <a id="h2k9" href="images/hackathons/h2k9.gif">
     <img src="images/hackathons/h2k9-s.gif" alt="h2k9-s"></a><br>
@@ -556,7 +566,6 @@ td {
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>
     и при поддержке <a href="http://www.uc.pt">University of Coimbra</a>.
-<tr>
 <td>
     <a id="p2k9" href="images/hackathons/p2k9.gif">
     <img src="images/hackathons/p2k9-s.gif" alt="p2k9-s"></a><br>
@@ -574,6 +583,7 @@ td {
     Стокгольм, Швеция<br>
     14 разработчиков<br>
     При финансивании <a href="https://www.iis.se/english/">.se Foundation</a>.
+<tr>
 <td>
     <a id="c2k9" href="images/hackathons/c2k9.gif">
     <img src="images/hackathons/c2k9-s.gif" alt="c2k9-s"></a><br>
@@ -583,7 +593,6 @@ td {
     46 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="n2k9" href="images/hackathons/n2k9.gif">
     <img src="images/hackathons/n2k9-s.gif" alt="n2k9-s"></a><br>
@@ -601,6 +610,7 @@ td {
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>
     and with the support of <a href="http://www.uc.pt">University of Coimbra</a>.
+<tr>
 <td>
     <a id="p2k8" href="images/hackathons/p2k8.gif">
     <img src="images/hackathons/p2k8-s.gif" alt="p2k8-s"></a><br>
@@ -610,7 +620,6 @@ td {
     13 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="c2k8" href="images/hackathons/c2k8.gif">
     <img src="images/hackathons/c2k8-s.gif" alt="c2k8-s"></a><br>
@@ -628,6 +637,7 @@ td {
     18 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a> и помощи Mark Uemura.
+<tr>
 <td>
     <a id="h2k7" href="images/hackathons/h2k7.gif">
     <img src="images/hackathons/h2k7-s.gif" alt="h2k7-s"></a><br>
@@ -638,7 +648,6 @@ td {
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>,
     а также при поддержке <a href="http://www.uc.pt">University of Coimbra</a>.
-<tr>
 <td>
     <a id="p2k7" href="images/hackathons/p2k7.gif">
     <img src="images/hackathons/p2k7-s.gif" alt="p2k7-s"></a><br>
@@ -657,6 +666,7 @@ td {
     50 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="f2k7" href="images/hackathons/f2k7.gif">
     <img src="images/hackathons/f2k7-s.gif" alt="f2k7-s"></a><br>
@@ -666,7 +676,6 @@ td {
     14 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="h2k6" href="images/hackathons/h2k6.gif">
     <img src="images/hackathons/h2k6-s.gif" alt="h2k6-s"></a><br>
@@ -686,6 +695,7 @@ td {
     14 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="k2k6" href="images/hackathons/k2k6.gif">
     <img src="images/hackathons/k2k6-s.gif" alt="k2k6-s"></a><br>
@@ -693,7 +703,6 @@ td {
     Август 28 - Sep 1, 2006<br>
     Замок Kransberg, Германия<br>
     14 разработчиков<br>
-<tr>
 <td>
     <a id="r2k6" href="images/hackathons/r2k6.gif">
     <img src="images/hackathons/r2k6-s.gif" alt="r2k6-s"></a><br>
@@ -711,6 +720,7 @@ td {
     47 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="v2k5" href="images/hackathons/v2k5.gif">
     <img src="images/hackathons/v2k5-s.gif" alt="v2k5-s"></a><br>
@@ -720,7 +730,6 @@ td {
     12 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="c2k5" href="images/hackathons/c2k5.gif">
     <img src="images/hackathons/c2k5-s.gif" alt="c2k5-s"></a><br>
@@ -739,6 +748,7 @@ td {
     46 разработчика<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="pf2k4" href="images/hackathons/pf2k4.gif">
     <img src="images/hackathons/pf2k4-s.gif" alt="pf2k4-s"></a><br>
@@ -747,7 +757,6 @@ td {
     Сишелт, Британская Колумбия<br>
     12 разработчиков<br>
     При поддержке Ryan McBride.
-<tr>
 <td>
     <a id="c2k3" href="images/hackathons/c2k3.gif">
     <img src="images/hackathons/c2k3-s.gif" alt="c2k3-s"></a><br>
@@ -765,6 +774,7 @@ td {
     Калгари, Альберта<br>
     42 разработчика<br>
     Основан DARPA.
+<tr>
 <td>
     <a id="c2k1-2" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -772,7 +782,6 @@ td {
     Август 17 - 20, 2001<br>
     Вашингтон, округ Колумбия
     Организован DARPA при поддержке <a href="http://www.usenix.org">USENIX</a>.
-<tr>
 <td>
     <a id="c2k1" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -790,6 +799,7 @@ td {
     18 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="c99" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -807,7 +817,7 @@ pf2k4, c2k4, and c2k5 созданы David Woloschuk.<br>
 n2k10 создана Theo de Raadt, усовершенствована Ty Semaka.<br>
 c2k10, j2k10, and p2k10 создана Damon Mlekuz.<br>
 k2k11 создана Bret Lambert.<br>
-r2k12, g2k12, n2k12, b2k13, n2k14, m2k14, g2k14, s2k15, c2k15, l2k15, p2k16, g2k16, b2k16, a2k17, d2k17, p2k17, s2k17, a2k18, p2k18, g2k18, a2k19, t2k19, g2k19, p2k19 создана Markus Hall.<br>
+r2k12, g2k12, n2k12, b2k13, n2k14, m2k14, g2k14, s2k15, c2k15, l2k15, p2k16, g2k16, b2k16, a2k17, d2k17, p2k17, s2k17, a2k18, p2k18, g2k18, a2k19, t2k19, g2k19, p2k19, e2k19 созданы Markus Hall.<br>
 p2k12 создана Bidon Mickael aka Mogmi.<br>
 c2k12 создана Theo de Raadt.<br>
 n2k13 купленная футболка с добавленной надписью.<br>
