[1.738] update link to OpenIKED - index.html

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <a href="openbgpd/index.html">OpenBGPD</a>,
       <a href="openntpd/index.html">OpenNTPD</a>,
       <a href="opensmtpd/index.html">OpenSMTPD</a>,
-      <a href="https://www.openiked.org">OpenIKED</a>,
+      <a href="openiked/index.html">OpenIKED</a>,
       <a href="https://mandoc.bsd.lv">mandoc</a>,
       <a href="libressl/index.html">LibreSSL</a>
       <br>
