[1.3] update/fix links - openiked/index.html

--- a/openiked/index.html
+++ b/openiked/index.html
@@ -3,7 +3,7 @@
     <meta charset=utf-8>
     <title>OpenIKED</title>
     <meta name="description" content="the main OpenIKED page">
-    <link rel="shortcut icon" href="favicon.ico" TYPE="image/x-icon">
+    <link rel="shortcut icon" href="../favicon.ico" TYPE="image/x-icon">
     <link rel="canonical" href="https://www.openiked.org">
     <link rel="stylesheet" href="../openbsd.css">
 
@@ -23,7 +23,7 @@
       <h1>Для OpenBSD</h1>
       <ul>
         <li><a href="../mail.html">Почтовая рассылка</a>
-        <li><a href="https://www.openbsd.org/anoncvs.html">AnonCVS</a>
+        <li><a href="../anoncvs.html">AnonCVS</a>
         <li><a href="https://cvsweb.openbsd.org/src/sbin/iked/">CVSWeb</a>
       </ul>
 
