[1.3] sync - openiked/papers.html

--- a/openiked/papers.html
+++ b/openiked/papers.html
@@ -20,10 +20,11 @@
 <ul>
 <li>
 <p>
-<a href="http://www.openbsd.org/papers/eurobsdcon2010-iked.pdf">IKEv2 VPN with OpenBSD iked(8)</a>,
-Reyk Fl&ouml;ter
+<a href="https://www.openbsd.org/papers/eurobsdcon2010-iked.pdf">
+IKEv2 VPN with OpenBSD iked(8)</a>, Reyk Fl&ouml;ter
 <p>
 Доклад был прочитан до того, как в OpenBSD 4.8 была включена
-первая официальная версия iked(8) и инструмент для его управления
-ikectl(8).
+первая официальная версия <a href="https://man.openbsd.org/iked">
+iked(8)</a> и инструмент для его управления
+<a href="https://man.openbsd.org/ikectl">ikectl(8)</a>.
 </ul>
