[1.92] update link - goals.html

--- a/goals.html
+++ b/goals.html
@@ -60,7 +60,7 @@ h2 {
 и т.д.)
 <p>
 <li>Создавать максимально аппаратно-независимый код.
-    <a href="https://www.openbsd.org/plat.html">По возможности поддерживать
+    <a href="plat.html">По возможности поддерживать
     как можно больше платформ и устройств.</a>
 <p>
 <li>Быть свободными от политики насколько это возможно; решения
