[1.89] update link to perf.html

--- a/faq/pf/index.html
+++ b/faq/pf/index.html
@@ -39,7 +39,7 @@ PF: Пакетный фильтр OpenBSD
 <li>Дополнительные темы
 	<ul>
 	<li><a href="https://openbsd.org/faq/pf/logging.html">Запись в журнал (лог)</a>
-	<li><a href="https://openbsd.org/faq/pf/perf.html">Производительность</a>
+	<li><a href="perf.html"   >Производительность</a>
 	<li><a href="https://openbsd.org/faq/pf/ftp.html">Проблемы с FTP</a>
 	<li><a href="https://openbsd.org/faq/pf/authpf.html">Оболочка для аутентификации пользователей на шлюзах (authpf)</a>
 	<li><a href="https://openbsd.org/faq/pf/carp.html">Создание избыточности брэндмауэра с помощью CARP и pfsync</a>
