[1.738] update link to artwork.html - index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <li><a href="https://www.openbsd.org/report.html">Сообщить об ошибке</a>
         <li><a href="mail.html">Почтовые рассылки</a>
         <li><a href="https://www.openbsd.org/lyrics.html">Песни</a> &amp;
-            <a href="https://www.openbsd.org/artwork.html">Artwork</a>
+            <a href="artwork.html">Иллюстрации</a>
         <li><a href="hackathons.html">Хакатоны</a>
         <li><a href="https://www.openbsd.org/groups.html">Группы пользователей</a>
         <li><a href="https://www.openbsd.org/support.html">Поддержка</a>
@@ -72,7 +72,7 @@
       </h1>
 
       <p id="callout">
-      Всего две уязвимости при стандартной установке за все время существования системы!
+      Всего две удаленные уязвимости в стандартной установке за черт знает сколько лет!
 
       <p>
       В рамках проекта OpenBSD разрабатывается <strong>СВОБОДНАЯ</strong>, мультиплатформенная, основанная
@@ -102,7 +102,7 @@
       <img width="60" height="90" src="images/rack2009-s.png" alt="rack"></a>
     <td>
       <hr>
-      Associated projects:
+      Дочерние проекты:
       <a href="openssh/index.html">OpenSSH</a>,
       <a href="openbgpd/index.html">OpenBGPD</a>,
       <a href="openntpd/index.html">OpenNTPD</a>,
