[1.541] update link to faq/pf/perf.html - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -220,7 +220,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li>Дополнительные вопросы
   <ul>
   <li><a href="https://www.openbsd.org/faq/pf/logging.html"   >Запись в журнал (logging)</a>
-  <li><a href="https://www.openbsd.org/faq/pf/perf.html"      >Производительность</a>
+  <li><a href="pf/perf.html"      >Производительность</a>
   <li><a href="https://www.openbsd.org/faq/pf/ftp.html"       >Проблемы с FTP</a>
   <li><a href="https://www.openbsd.org/faq/pf/authpf.html"    >Оболочка для аутентификации пользователей на шлюзах (authpf)</a>
   <li><a href="https://www.openbsd.org/faq/pf/carp.html"      >Создание избыточности брэндмауэра (CARP и pfsync)</a>
