--- a/anoncvs.html
+++ b/anoncvs.html
@@ -565,7 +565,7 @@ while smaller operations use fewer resources, anoncvs still makes much more of
 an impact than ftp).
 Such anoncvs machines should have excellent network connectivity for the area
 they are expected to serve.
-A <a href="anoncvs.shar">document</a> which describes the setup of anoncvs
+A <a href="https://www.openbsd.org/anoncvs.shar">document</a> which describes the setup of anoncvs
 servers is available.
 
 <h3 id="NOTES">Final notes</h3>
