[1.805] sync - ftp.html

--- a/ftp.html
+++ b/ftp.html
@@ -156,6 +156,13 @@ OpenBSD можно скачать через HTTP(s) или FTP.
 	https://ftp.fr.openbsd.org/pub/OpenBSD/</a>
 	</td>
     </tr><tr>
+    <td>
+    <strong>Germany (Berlin)</strong>
+    </td><td>
+    <a href="https://ftp.spline.de/pub/OpenBSD/" rel="nofollow">
+    https://ftp.spline.de/pub/OpenBSD/</a>
+    </td>
+    </tr><tr>
 	<td>
 	<strong>Germany (Esslingen)</strong>
 	</td><td>
@@ -597,6 +604,13 @@ OpenBSD можно скачать через HTTP(s) или FTP.
 	</td>
     </tr><tr>
 	<td>
+	<strong>Germany (Berlin)</strong>
+	</td><td>
+	<a href="ftp://ftp.spline.de/pub/OpenBSD/" rel="nofollow">
+	ftp://ftp.spline.de/pub/OpenBSD/</a>
+	</td>
+    </tr><tr>
+	<td>
 	<strong>Germany (Esslingen)</strong>
 	</td><td>
 	<a href="ftp://mirror.hs-esslingen.de/pub/OpenBSD/" rel="nofollow">
@@ -895,6 +909,12 @@ OpenBSD можно скачать через HTTP(s) или FTP.
 	<strong>France (Paris)</strong>
 	</td><td>
 	rsync://ftp2.fr.openbsd.org/OpenBSD/
+	</td>
+    </tr><tr>
+	<td>
+	<strong>Germany (Berlin)</strong>
+	</td><td>
+	rsync://ftp.spline.de/OpenBSD/
 	</td>
     </tr><tr>
 	<td>
