--- a/hackathons.html
+++ b/hackathons.html
@@ -90,6 +90,16 @@ td {
 <table>
 <tr>
 <td>
+    <a id="u2k20" href="images/hackathons/u2k20.gif">
+    <img src="images/hackathons/u2k20-s.gif" alt="u2k20-s"></a><br>
+    u2k20: uckermark hackathon<br>
+    Январь 12 - 17, 2020<br>
+    Уккермарк, Германия<br>
+    14 разработчиков<br>
+    При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
+    и помощи <a href="https://www.seehotel-huberhof.de">Seehotel Huberhof</a>.
+    <br>
+<td>
     <a id="e2k19" href="images/hackathons/e2k19.gif">
     <img src="images/hackathons/e2k19-s.gif" alt="e2k19-s"></a><br>
     e2k19: elk lakes cabin hackathon<br>
@@ -109,6 +119,7 @@ td {
     и поддержке <a href="http://fmi.unibuc.ro">факультета математики и компьютерных наук
     бухарестского университета</a>.
     <br>
+<tr>
 <td>
     <a id="g2k19" href="images/hackathons/g2k19.gif">
     <img src="images/hackathons/g2k19-s.gif" alt="g2k19-s"></a><br>
@@ -118,7 +129,6 @@ td {
     43 разработчика<br>
     При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
-<tr>
 <td>
     <a id="t2k19" href="images/hackathons/t2k19.gif">
     <img src="images/hackathons/t2k19-s.gif" alt="t2k19-s"></a><br>
@@ -139,6 +149,7 @@ td {
     При поддержке <a href="https://www.victoria.ac.nz">Victoria University of Wellington</a>
     и <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
+<tr>
 <td>
     <a id="l2k18" href="images/hackathons/l2k18.jpg">
     <img src="images/hackathons/l2k18-s.gif" alt="l2k18-s"></a><br>
@@ -148,7 +159,6 @@ td {
     5 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
-<tr>
 <td>
     <a id="n2k18" href="images/hackathons/n2k18.gif">
     <img src="images/hackathons/n2k18-s.gif" alt="n2k18-s"></a><br>
@@ -168,6 +178,7 @@ td {
     39 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и Mitja Mu&#382;eni&#269;.
+<tr>
 <td>
     <a id="p2k18" href="images/hackathons/p2k18.gif">
     <img src="images/hackathons/p2k18-s.gif" alt="p2k18-s"></a><br>
@@ -177,7 +188,6 @@ td {
     24 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.epitech.eu">Epitech Nantes</a>.
-<tr>
 <td>
     <a id="a2k18" href="images/hackathons/a2k18.gif">
     <img src="images/hackathons/a2k18-s.gif" alt="a2k18-s"></a><br>
@@ -196,6 +206,7 @@ td {
     10 разработчиков<br>
     При поддержке <a href="http://www.foretell.ca">ForeTell Technologies</a>
     и <a href="http://www.xplornet.ca">Xplornet</a>.
+<tr>
 <td>
     <a id="p2k17" href="images/hackathons/p2k17.gif">
     <img src="images/hackathons/p2k17-s.gif" alt="p2k17-s"></a><br>
@@ -206,7 +217,6 @@ td {
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.in-berlin.de">IN-Berlin</a> and
     <a href="http://www.hostserver.de/">Hostserver</a>.
-<tr>
 <td>
     <a id="t2k17" href="images/hackathons/t2k17.jpg">
     <img src="images/hackathons/t2k17-s.gif" alt="t2k17-s"></a><br>
@@ -225,6 +235,7 @@ td {
     24 разработчика<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.genua.de">genua</a>.
+<tr>
 <td>
     <a id="noshirt" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -233,7 +244,6 @@ td {
     Эдмонтон, Канада<br>
     5 разработчиков<br>
     При поддержке Bob Beck.
-<tr>
 <td>
     <a id="a2k17" href="images/hackathons/a2k17.gif">
     <img src="images/hackathons/a2k17-s.gif" alt="a2k17-s"></a><br>
@@ -264,6 +274,7 @@ td {
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и оказанной помощи от <a href="http://www.enseeiht.fr">ENSEEIHT</a> и
     <a href="http://www.objectif-libre.com">Objectif Libre</a>.
+<tr>
 <td>
     <a id="b2k16" href="images/hackathons/b2k16.gif">
     <img src="images/hackathons/b2k16-s.gif" alt="b2k16-s"></a><br>
@@ -272,7 +283,6 @@ td {
     Будапешт, Венгрия<br>
     10 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="g2k16" href="images/hackathons/g2k16.gif">
     <img src="images/hackathons/g2k16-s.gif" alt="g2k16-s"></a><br>
@@ -293,6 +303,7 @@ td {
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and <a href="http://www.oracle.com">Oracle</a>, with the help of
     <a href="http://cuni.cz">Charles University</a>.
+<tr>
 <td>
     <a id="p2k16" href="images/hackathons/p2k16.gif">
     <img src="images/hackathons/p2k16-s.gif" alt="p2k16-s"></a><br>
@@ -302,7 +313,6 @@ td {
     22 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.epitech.eu">Epitech Nantes</a>.
-<tr>
 <td>
     <a id="n2k15" href="images/hackathons/n2k15.gif">
     <img src="images/hackathons/n2k15-s.gif" alt="n2k15-s"></a><br>
@@ -321,6 +331,7 @@ td {
     22 разработчика<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.in-berlin.de">IN-Berlin</a>.
+<tr>
 <td>
     <a id="l2k15" href="images/hackathons/l2k15.gif">
     <img src="images/hackathons/l2k15-s.gif" alt="l2k15-s"></a><br>
@@ -330,7 +341,6 @@ td {
     17 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     with help of the <a href="http://foi.unizg.hr">Open Systems and Security Lab</a>.
-<tr>
 <td>
     <a id="j2k15" href="images/hackathons/j2k15.gif">
     <img src="images/hackathons/j2k15-s.gif" alt="j2k15-s"></a><br>
@@ -348,6 +358,7 @@ td {
     45 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://sait.ca">SAIT</a>.
+<tr>
 <td>
     <a id="p2k15" href="images/hackathons/p2k15.gif">
     <img src="images/hackathons/p2k15-s.gif" alt="p2k15-s"></a><br>
@@ -357,7 +368,6 @@ td {
     14 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of Andy Henderson.
-<tr>
 <td>
     <a id="s2k15" href="images/hackathons/s2k15.gif">
     <img src="images/hackathons/s2k15-s.gif" alt="s2k15-s"></a><br>
@@ -376,6 +386,7 @@ td {
     49 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of Mitja Mu&#382;eni&#269;.
+<tr>
 <td>
     <a id="m2k14" href="images/hackathons/m2k14.gif">
     <img src="images/hackathons/m2k14-s.gif" alt="m2k14-s"></a><br>
@@ -385,7 +396,6 @@ td {
     12 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.uca.ma/">Universit&eacute; Cadi Ayyad</a>.
-<tr>
 <td>
     <a id="n2k14" href="images/hackathons/n2k14.gif">
     <img src="images/hackathons/n2k14-s.gif" alt="n2k14-s"></a><br>
@@ -404,6 +414,7 @@ td {
     21 разработчик<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.in-berlin.de">IN-Berlin</a>.
+<tr>
 <td>
     <a id="t2k13" href="images/hackathons/t2k13.jpg">
     <img src="images/hackathons/t2k13-s.gif" alt="t2k13-s"></a><br>
@@ -413,7 +424,6 @@ td {
     43 разработчика<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.utoronto.ca">University of Toronto</a>.
-<tr>
 <td>
     <a id="n2k13" href="images/hackathons/n2k13.gif">
     <img src="images/hackathons/n2k13-s.gif" alt="n2k13-s"></a><br>
@@ -432,6 +442,7 @@ td {
     10 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.uc.pt">University of Coimbra</a>.
+<tr>
 <td>
     <a id="p2k12" href="images/hackathons/p2k12.gif">
     <img src="images/hackathons/p2k12-s.gif" alt="p2k12-s"></a><br>
@@ -441,7 +452,6 @@ td {
     9 разработчиков<br>
     Funded by <a href="https://www.openbsd.org/donations.html">donations to
     The OpenBSD Project</a>.
-<tr>
 <td>
     <a id="n2k12" href="images/hackathons/n2k12.gif">
     <img src="images/hackathons/n2k12-s.gif" alt="n2k12-s"></a><br>
@@ -458,6 +468,7 @@ td {
     Будапешт, Венгрия<br>
     41 разработчик<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="r2k12" href="images/hackathons/r2k12.gif">
     <img src="images/hackathons/r2k12-s.gif" alt="r2k12-s"></a><br>
@@ -468,7 +479,6 @@ td {
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and support of <a href="http://www.ihp.fr">Institute Henri Poincar&eacute;</a> and
     <a href="http://www.u-psud.fr">Paris-Sud University</a>.
-<tr>
 <td>
     <a id="p2k11" href="images/hackathons/p2k11.gif">
     <img src="images/hackathons/p2k11-s.gif" alt="p2k11-s"></a><br>
@@ -487,6 +497,7 @@ td {
     8 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.uc.pt">University of Coimbra</a>.
+<tr>
 <td>
     <a id="s2k11" href="images/hackathons/s2k11.jpg">
     <img src="images/hackathons/s2k11-s.gif" alt="s2k11-s"></a><br>
@@ -496,7 +507,6 @@ td {
     25 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of Mitja Mu&#382;eni&#269;.
-<tr>
 <td>
     <a id="c2k11" href="images/hackathons/c2k11.gif">
     <img src="images/hackathons/c2k11-s.gif" alt="c2k11-s"></a><br>
@@ -513,6 +523,7 @@ td {
     Hafnarfjordur, Iceland<br>
     15 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="p2k10" href="images/hackathons/p2k10.gif">
     <img src="images/hackathons/p2k10-s.gif" alt="p2k10-s"></a><br>
@@ -522,7 +533,6 @@ td {
     19 разработчиков<br>
     При поддержке
     <a href="https://www.openbsd.org/donations.html">пожертований проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="j2k10" href="images/hackathons/j2k10.gif">
     <img src="images/hackathons/j2k10-s.gif" alt="j2k10-s"></a><br>
@@ -539,6 +549,7 @@ td {
     46 разработчиков<br>
     При поддержке
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <br>
     <br>
@@ -555,7 +566,6 @@ td {
     17 разработчиков<br>
     При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://vpac.org">Victorian Partnership for Advanced Computing</a>
-<tr>
 <td>
     <a id="h2k9" href="images/hackathons/h2k9.gif">
     <img src="images/hackathons/h2k9-s.gif" alt="h2k9-s"></a><br>
@@ -575,6 +585,7 @@ td {
     14 разоаботчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="f2k9" href="images/hackathons/f2k9.gif">
     <img src="images/hackathons/f2k9-s.gif" alt="f2k9-s"></a><br>
@@ -583,7 +594,6 @@ td {
     Стокгольм, Швеция<br>
     14 разработчиков<br>
     При финансивании <a href="https://www.iis.se/english/">.se Foundation</a>.
-<tr>
 <td>
     <a id="c2k9" href="images/hackathons/c2k9.gif">
     <img src="images/hackathons/c2k9-s.gif" alt="c2k9-s"></a><br>
@@ -600,6 +610,7 @@ td {
     Январь 26 - 30, 2009<br>
     Базель, Швейцария<br>
     19 разработчиков<br>
+<tr>
 <td>
     <a id="h2k8" href="images/hackathons/h2k8.gif">
     <img src="images/hackathons/h2k8-s.gif" alt="h2k8-s"></a><br>
@@ -610,7 +621,6 @@ td {
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>
     and with the support of <a href="http://www.uc.pt">University of Coimbra</a>.
-<tr>
 <td>
     <a id="p2k8" href="images/hackathons/p2k8.gif">
     <img src="images/hackathons/p2k8-s.gif" alt="p2k8-s"></a><br>
@@ -628,6 +638,7 @@ td {
     Эдмонтон, Аьберта<br>
     55 разработчиков<br>
     Организован <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="n2k8" href="images/hackathons/n2k8.gif">
     <img src="images/hackathons/n2k8-s.gif" alt="n2k8-s"></a><br>
@@ -637,7 +648,6 @@ td {
     18 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a> и помощи Mark Uemura.
-<tr>
 <td>
     <a id="h2k7" href="images/hackathons/h2k7.gif">
     <img src="images/hackathons/h2k7-s.gif" alt="h2k7-s"></a><br>
@@ -657,6 +667,7 @@ td {
     13 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="c2k7" href="images/hackathons/c2k7.gif">
     <img src="images/hackathons/c2k7-s.gif" alt="c2k7-s"></a><br>
@@ -666,7 +677,6 @@ td {
     50 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="f2k7" href="images/hackathons/f2k7.gif">
     <img src="images/hackathons/f2k7-s.gif" alt="f2k7-s"></a><br>
@@ -686,6 +696,7 @@ td {
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>,
     а также при поддержке <a href="http://www.uc.pt">University of Coimbra</a>.
+<tr>
 <td>
     <a id="p2k6" href="images/hackathons/p2k6.gif">
     <img src="images/hackathons/p2k6-s.gif" alt="p2k6-s"></a><br>
@@ -695,7 +706,6 @@ td {
     14 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="k2k6" href="images/hackathons/k2k6.gif">
     <img src="images/hackathons/k2k6-s.gif" alt="k2k6-s"></a><br>
@@ -711,6 +721,7 @@ td {
     Гамбург, Германия<br>
     6 разработчиков<br>
     При поддержке Henning Brauer.
+<tr>
 <td>
     <a id="c2k6" href="images/hackathons/c2k6.gif">
     <img src="images/hackathons/c2k6-s.gif" alt="c2k6-s"></a><br>
@@ -720,7 +731,6 @@ td {
     47 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="v2k5" href="images/hackathons/v2k5.gif">
     <img src="images/hackathons/v2k5-s.gif" alt="v2k5-s"></a><br>
@@ -739,6 +749,7 @@ td {
     60 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="c2k4" href="images/hackathons/c2k4.gif">
     <img src="images/hackathons/c2k4-s.gif" alt="c2k4-s"></a><br>
@@ -748,7 +759,6 @@ td {
     46 разработчика<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="pf2k4" href="images/hackathons/pf2k4.gif">
     <img src="images/hackathons/pf2k4-s.gif" alt="pf2k4-s"></a><br>
@@ -766,6 +776,7 @@ td {
     51 разработчик<br>
     Основан <a href="https://www.nlnetlabs.nl">NLnet</a>
     (после того, как DARPA прекратила оказывать поддержку).
+<tr>
 <td>
     <a id="c2k2" href="images/hackathons/c2k2.gif">
     <img src="images/hackathons/c2k2-s.gif" alt="c2k2-s"></a><br>
@@ -774,7 +785,6 @@ td {
     Калгари, Альберта<br>
     42 разработчика<br>
     Основан DARPA.
-<tr>
 <td>
     <a id="c2k1-2" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -790,6 +800,7 @@ td {
     Кембридж, Массачусетс<br>    
     25 разработчиков<br>
     Организован DARPA при поддержке <a href="http://www.mit.edu">MIT</a>.
+<tr>
 <td>
     <a id="c2k" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -799,7 +810,6 @@ td {
     18 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="c99" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -830,3 +840,4 @@ n2k16 создана Jojin&amp;HedgeHog.<br>
 l2k16 концепт предложен Joel Sing, оформление создано Markus Hall.<br>
 t2k17 создана Christopher Roberts.<br>
 n2k18 создана Jojin&amp;HedgeHog.<br>
+u2k20 создана Pamela Mosiejczuk.<br>
