[1.29] sync - arm64.html

--- a/arm64.html
+++ b/arm64.html
@@ -82,6 +82,7 @@ OpenBSD/arm64 работает на следующем железе:
 	<li>Allwinner A64/H5
 	<ul>
 		<li>Pine64 Pine 64/64+
+		<li>Pine64 Pinebook
 		<li>NanoPi A64
 		<li>Orange Pi PC2
 	</ul>
@@ -113,6 +114,7 @@ OpenBSD/arm64 работает на следующем железе:
 		<li>Pine64 ROCK64
 		<li>Pine64 ROCKPro64
 		<li>Firefly-RK3399
+		<li>FriendlyElec NanoPC-T4
 		<li>Theobroma Systems RK3399-Q7
 	</ul>
 	<li>Socionext SC2A11
