--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <li><a href="faq/index.html">FAQ</a>
         <li><a href="https://man.openbsd.org">Man-страницы</a>
         <li><a href="https://www.openbsd.org/errata66.html">Патчи</a>
-        <li><a href="https://www.openbsd.org/report.html">Сообщить об ошибке</a>
+        <li><a href="report.html">Сообщить об ошибке</a>
         <li><a href="mail.html">Почтовые рассылки</a>
         <li><a href="https://www.openbsd.org/lyrics.html">Песни</a> &amp;
             <a href="artwork.html">Иллюстрации</a>
